# PracticeNotebooks

./: Basic Segmentation.ipynb  CMakeLists.txt  CycleGAN_Exercise.ipynb  ELB_Verision_Coco_Format_Fruit_Defect_Dataset.ipynb  HMM Tagger.ipynb  Latent_dirichlet_allocation.ipynb  Pytorch_mAP_RetinaNet_and_Finetune_fasterrcnn_Fruit_Defect_Dataset.ipynb  README.md  Unsupervised_Practice.ipynb  batching-lyric-data.ipynb  classes_prac.py  generator-model-on-anime-dataset.ipynb  machine_translation.ipynb  main.cpp  sentiment_analysis.ipynb
Adder/: adder.cpp  adder.h
Det+IL/: ILSVRCVid2015VideoDetectionSSHFirst (10).ipynb  ILSVRCVid2015VideoDetectionSSHFirst (11).ipynb  ILSVRCVid2015VideoDetectionSSHFirst (14).ipynb  ILSVRCVid2015VideoDetectionSSHFirst (15).ipynb  ILSVRCVid2015VideoDetectionSSHFirst (9).ipynb
matlab_radar/: CA_CFAR.m  FFTTransform.m  RadarTargetGenandDet.asv  RadarTargetGenandDet.m  doppler_calc.m  range_calc.m  twodFFT.m
